--- a/J-vite-custom/package.json
+++ b/J-vite-custom/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint \"./src/**\" --report-unused-disable-directives --ignore-pattern .gitignore"
+    "lint": "eslint \"./src/**\" --report-unused-disable-directives --ignore-pattern .gitignore",
+    "compile:jsx": "tsc -p ./tsconfig.json",
+    "watch:jsx": "tsc -p ./tsconfig.json --watch"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -21,6 +23,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.8.0",
+    "typescript": "5.5.4",
     "vite": "5.3.5"
   },
   "dependencies": {
